--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -59,7 +59,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "awkward-client": "workspace:*"
   },
   "jest": {
     "moduleFileExtensions": [
